[package]
name = "overhelper"
version = "0.1.2"
edition = "2021"

[dependencies]
chrono = "0.4.23"
directories = "4.0.1"
iced = "0.7.0"
iced_native = "0.8.0"
lazy_static = "1.4.0"
serde_json = "1.0.91"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.3"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
